# Stock-Market-Predictions-with-LSTM

./: .gitignore  Makefile  README.md
stock-market-lstm/: .gitignore  LICENSE  README.md  pyproject.toml
stock-market-lstm/stock_market_lstm/: __init__.py  plots.py
stock-market-lstm/stock_market_lstm/modeling/: predict.py
stock_market_lstm/: config.py  dataset.py  features.py  plots.py
stock_market_lstm/modeling/: predict.py  train.py
